--- a/app/src/App.css
+++ b/app/src/App.css
@@ -4,6 +4,13 @@
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  background-color: #ffb78e;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 0.5fr 90vh 3fr 3fr 3fr 0.2fr;
+      grid-template-rows: 0.5fr 90vh 3fr 3fr 3fr 0.2fr;
 }
 
 /* .App-header {
@@ -21,9 +28,21 @@
 }
 
 #apiref {
-  position: absolute;
+  position: -webkit-sticky;
+  position: sticky;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
   background-color: #fe9658;
-  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   bottom: 0;
   border-top: 1px solid black;
@@ -40,9 +59,10 @@
 }
 
 #mainnavbar {
-  position: -webkit-sticky;
-  position: sticky;
   background-color: #fe9658;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
   text-align: center;
   width: 100%;
   top: 0;
@@ -92,5 +112,25 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+#discord {
+  background-color: #7289da;
+  color: #ffffff;
+  border-radius: 5px;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  margin: 15px;
 }
 /*# sourceMappingURL=App.css.map */
