--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -4,6 +4,10 @@
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  background-color: #ffb78e;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.5fr 90vh 3fr 3fr 3fr 0.2fr;
 }
 
 /* .App-header {
@@ -22,9 +26,12 @@
 }
 
 #apiref {
-  position: absolute;
+  position: sticky;
+  grid-column: 1/3;
   background-color: #fe9658;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   bottom: 0;
   border-top: 1px solid black;
@@ -39,8 +46,8 @@
 }
 
 #mainnavbar {
-  position: sticky;
   background-color: #fe9658;
+  grid-column: 1/3;
   text-align: center;
   width: 100%;
   top: 0;
@@ -71,4 +78,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#discord{
+    background-color: #7289da;
+    color: #ffffff;
+    border-radius: 5px;
+    grid-column: 1/3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin: 15px;
 }
