--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,16 +1,16 @@
 .App {
   text-align: center;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background-color: #ffb78e;
+  background-color: white;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: 0.5fr 90vh 3fr 3fr 3fr 0.2fr;
-      grid-template-rows: 0.5fr 90vh 3fr 3fr 3fr 0.2fr;
+  -ms-grid-rows: 0.1fr 3fr 3fr 3fr 3fr 0.2fr;
+      grid-template-rows: 0.1fr 3fr 3fr 3fr 3fr 0.2fr;
 }
 
 /* .App-header {
@@ -33,6 +33,7 @@
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/3;
+  grid-row: -1;
   background-color: #fe9658;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -58,57 +59,62 @@
   font-weight: 700;
 }
 
-#mainnavbar {
+#navbar_content {
   background-color: #fe9658;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/3;
-  text-align: center;
-  width: 100%;
   top: 0;
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 10% 25% auto;
+      grid-template-columns: 10% 25% auto;
 }
 
-#mainnavbar #navbar_content {
+#navbar_content #buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  width: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 5px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-self: center;
 }
 
-#mainnavbar #navbar_content #logo_and_text {
-  -ms-grid-column-align: start;
-      justify-self: start;
+#navbar_content #logo_and_text {
+  margin: 10px;
   padding: 5px;
   padding-right: 15px;
-  border-right: 2px dashed #0169a7;
 }
 
-#mainnavbar #navbar_content #logo_and_text a {
+#navbar_content #logo_and_text a {
   text-decoration: none;
-  color: #0169a7;
+  color: #ffffff;
   font-weight: 700;
+  font-size: larger;
 }
 
-#mainnavbar #navbar_content #logo_and_text #navbar_logo {
+#navbar_content #logo_and_text #navbar_logo {
   width: 100px;
 }
 
 .formContent {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -132,5 +138,65 @@
           align-items: center;
   cursor: pointer;
   margin: 15px;
+}
+
+#info {
+  margin: 0 30px 0 30px;
+  font-size: 20px;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 3fr 3fr 3fr;
+      grid-template-columns: 3fr 3fr 3fr;
+}
+
+#info div {
+  margin: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #0169a7;
+  color: white;
+  border-radius: 10px;
+}
+
+#info #weatherConditions {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+}
+
+#info #informationsAboutCountry {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+}
+
+#info #airQuality {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+}
+
+.spec {
+  padding: 10px;
+}
+
+.spec .specTitle {
+  font-size: larger;
+  font-weight: 600;
+  margin-right: 2;
 }
 /*# sourceMappingURL=App.css.map */
