--- a/app/src/App.css
+++ b/app/src/App.css
@@ -9,8 +9,8 @@
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: 0.1fr 3fr 3fr 3fr 3fr 0.2fr;
-      grid-template-rows: 0.1fr 3fr 3fr 3fr 3fr 0.2fr;
+  -ms-grid-rows: 0.1fr 3fr 1fr 0.2fr;
+      grid-template-rows: 0.1fr 3fr 1fr 0.2fr;
 }
 
 /* .App-header {
@@ -28,8 +28,6 @@
 }
 
 #apiref {
-  position: -webkit-sticky;
-  position: sticky;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/3;
@@ -153,6 +151,7 @@
 }
 
 #info div {
+  background-color: #0169a7;
   margin: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -167,21 +166,27 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: #0169a7;
   color: white;
   border-radius: 10px;
-}
-
-#info #weatherConditions {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
 }
 
 #info #informationsAboutCountry {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
+}
+
+#info #weatherConditions {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  background-color: #0169a7;
+}
+
+#info #weatherConditions img {
+  margin-top: 15px;
+  background-color: white;
+  border-radius: 50px;
 }
 
 #info #airQuality {
