--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -7,7 +7,7 @@
   background-color: white;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 0.1fr 3fr 3fr 3fr 3fr 0.2fr;
+  grid-template-rows: 0.1fr 3fr 1fr 0.2fr;
 }
 
 /* .App-header {
@@ -26,7 +26,7 @@
 }
 
 #apiref {
-  position: sticky;
+
   grid-column: 1/3;
   grid-row: -1;
   background-color: #fe9658;
@@ -104,20 +104,26 @@
   display: grid;
   grid-template-columns: 3fr 3fr 3fr;
   & div {
+    background-color: #0169a7;
     margin: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #0169a7;
     color: white;
     border-radius: 10px;
   }
-  & #weatherConditions {
-    grid-column: 2/3;
-  }
   & #informationsAboutCountry {
     grid-column: 1/2;
+  }
+  & #weatherConditions {
+    grid-column: 2/3;
+    background-color: #0169a7;
+    & img {
+      margin-top: 15px;
+      background-color: white;
+      border-radius: 50px;
+    }
   }
   & #airQuality {
     grid-column: 3/4;
