css display weather

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -185,7 +185,7 @@
 
 #info #weatherConditions img {
   margin-top: 15px;
-  background-color: white;
+  background-color: whitesmoke;
   border-radius: 50px;
 }
 
