--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -121,7 +121,7 @@
     background-color: #0169a7;
     & img {
       margin-top: 15px;
-      background-color: white;
+      background-color: whitesmoke;
       border-radius: 50px;
     }
   }
