--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -7,7 +7,7 @@
   background-color: white;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 0.1fr 3fr 1fr 0.2fr;
+  grid-template-rows: 0.1fr  0.2fr 2fr;
 }
 
 /* .App-header {
